# test-book-library

./: .gitignore  README.md  book.py  book_manager.py  exceptions.py  fake_json_db_generator.py  main.py  manager.py  pyproject.toml  Задание.md
commands/: add_book.py  all_commands.py  change_status.py  delete.py
config/: config.py  log.py
database/: database.py  json_db.py
src/: book.py  command_handler.py  manager.py
src/commands/: README.md  __init__.py  add_book.py  all_commands.py  change_status.py  command_handler.py  delete.py  search_book.py  show_all_books.py
src/commands/utils/: README.md  __init__.py  paginator.py
src/commands/utils/paginator/: paginator.py
src/commands/utils/search_engine/: engine.py  text.py
src/config/: __init__.py  log.py
src/database/: README.md  __init__.py  database.py  json_db.py
src/utils/: __init__.py  other.py  text.py
src/utils/paginator/: README.md  __init__.py  paginator.py
src/utils/search_engine/: README.md  __init__.py  engine.py  text.py
utils/: __init__.py  other.py
