[tool.poetry]
name = "test-book-library"
version = "0.1.0"
description = "Приложение для управления библиотекой."
authors = ["web-mc <peshkov.mc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
